:art: Avoid overflowing dataset titles

--- a/gsa-frontend/src/styles.scss
+++ b/gsa-frontend/src/styles.scss
@@ -99,6 +99,7 @@ h1 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 100%;
 }
 
 .italic {
